@@ -9,13 +9,12 @@
 #    Col 1: List of primary ids loaded in to MGI typeKey=42, ldbKey in (189, 190)
 #    Col 2: secondary GEO id, if applicable ldbKey=190
 #    Col 3: experiment type vocabKey=121
-#    Col 4: raw sample count
-#    Col 5: evaluation state  vocabKey=116
-#    Col 6: study type vocabKey=124
-#    Col 7: curation state vocabKey=117
-#    Col 8: experimental variables, multiples separated by pipes vocabKey=122
-#    Col 9: In Expression Atlas Set Y/N
-#    Col 10: In RNA-Seq Load Set Y/N
+#    Col 4: evaluation state  vocabKey=116
+#    Col 5: study type vocabKey=124
+#    Col 6: curation state vocabKey=117
+#    Col 7: experimental variables, multiples separated by pipes vocabKey=122
+#    Col 8: In Expression Atlas Set Y/N
+#    Col 9: In RNA-Seq Load Set Y/N
 #
 #    monthly run sufficient for this one
 #    make in a format that will load into excel easily (such as tab delimited)
@@ -26,6 +25,11 @@
 # Notes:
 #
 # History:
+#
+# lec   03/14/2024
+#       wts2-1439/fl2-784/HT/remove Raw Sample Count from PWI & QC
+#       undo:
+#       wts2-1430/fl2-778/add column to existing GXD_HTOverview
 #
 # sc    12/22/2022
 #       - WTS2-1077 add PubMed ids to HT overview report
@@ -91,12 +95,12 @@ for r in results:
    pubMedIdDict[expKey].append(r['pubMedId'])
 
 results = db.sql('''
-        select a1.accid as primary, a2.accid as secondary, e._Experiment_key, p.value as rawCounts,
+        select a1.accid as primary, a2.accid as secondary, e._Experiment_key,
             t1.term as exptType, t2.term as evalState, t3.term as studyType, 
             t4.term as curationState, v._Term_key as varTermKey, 
             vt.Term as varTerm
         from ACC_Accession a1, VOC_Term t1, VOC_Term t2, VOC_Term t3, 
-            VOC_Term t4, MGI_Property p, GXD_HTExperiment e
+            VOC_Term t4, GXD_HTExperiment e
         left outer join ACC_Accession a2 on (e._Experiment_key = a2._Object_key
             and a2._MGIType_key = 42
             and a2._LogicalDB_key in(189, 190)
@@ -112,9 +116,6 @@ results = db.sql('''
             and e._EvaluationState_key = t2._Term_key
             and e._StudyType_key = t3._Term_key
             and e._CurationState_key = t4._Term_key
-            and e._Experiment_key = p._Object_key
-            and p._MGIType_key = 42
-            and p._PropertyTerm_key = 20475424
             ''', 'auto')
 exptDict = {}
 for r in results:
@@ -128,7 +129,6 @@ fp = reportlib.init(sys.argv[0], 'GXD Overview QC', os.environ['QCOUTPUTDIR'])
 fp.write('Primary ID' + TAB)
 fp.write('Secondary ID' + TAB)
 fp.write('Experiment Type' + TAB)
-fp.write('Raw Counts' + TAB)
 fp.write('Evaluation State' + TAB)
 fp.write('Study Type' + TAB)
 fp.write('Curation State' + TAB)
@@ -148,7 +148,6 @@ for key in exptDict:
     evalState = r['evalState']
     studyType = r['studyType']
     curationState = r['curationState']
-    rawCounts = r['rawCounts']
 
     varList = []
     for r in exptDict[key]:
@@ -173,7 +172,6 @@ for key in exptDict:
     fp.write(primary + TAB)
     fp.write(str(secondary) + TAB)
     fp.write(exptType + TAB)
-    fp.write(str(rawCounts) + TAB)
     fp.write(evalState + TAB)
     fp.write(studyType + TAB)
     fp.write(curationState + TAB)
